--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
           enable-cache: true
       
       - name: Install uv
-        run: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v5
 
       - name: Install the project
         run: uv sync --all-extras --dev
