--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,6 @@ jobs:
         run: uv sync --all-extras --dev
         
       - name: Run tests
-        run: cd backend
-        run: pytest
+        run: |
+          cd backend
+          pytest
