--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,22 @@
-# DB settings
-POSTGRES_USERNAME=
-POSTGRES_PASSWORD=
-POSTGRES_URL=
-POSTGRES_PORT=
-POSTGRES_NAME=
+MODE=DEV
 
-DB_LINK=postgresql+asyncpg://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_URL}:${POSTGRES_PORT}/${POSTGRES_NAME}
+# DB settings
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=social
+
+TEST_DB_USERNAME=postgres
+TEST_DB_PASSWORD=postgres
+TEST_DB_HOST=localhost
+TEST_DB_PORT=5432
+TEST_DB_NAME=social-test
+
+# Token settings
+ACCESS_SECRET_KEY = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+ACCESS_EXPIRE_MINUTES = 5
+
+REFRESH_SECRET_KEY = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
+REFRESH_EXPIRE_MINUTES = 120
+
