--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
 MODE=DEV
 
 # DB settings
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=social
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
 
-TEST_DB_USERNAME=postgres
-TEST_DB_PASSWORD=postgres
-TEST_DB_HOST=localhost
-TEST_DB_PORT=5432
-TEST_DB_NAME=social-test
+TEST_DB_USERNAME=
+TEST_DB_PASSWORD=
+TEST_DB_HOST=
+TEST_DB_PORT=
+TEST_DB_NAME=
 
 # Token settings
-ACCESS_SECRET_KEY = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-ACCESS_EXPIRE_MINUTES = 5
+ACCESS_SECRET_KEY=
+ACCESS_EXPIRE_MINUTES=
 
-REFRESH_SECRET_KEY = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
-REFRESH_EXPIRE_MINUTES = 120
+REFRESH_SECRET_KEY=
+REFRESH_EXPIRE_MINUTES=
 
