.env.actions fix

--- a/.env.actions
+++ b/.env.actions
@@ -12,9 +12,9 @@ TEST_DB_HOST=localhost
 TEST_DB_PORT=5432
 TEST_DB_NAME=social-test
 
-ACCESS_SECRET_KEY = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-ACCESS_EXPIRE_MINUTES = 5
+ACCESS_SECRET_KEY=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+ACCESS_EXPIRE_MINUTES=5
 
-REFRESH_SECRET_KEY = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
-REFRESH_EXPIRE_MINUTES = 120
+REFRESH_SECRET_KEY=BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
+REFRESH_EXPIRE_MINUTES=120
 
